@@ -11,6 +11,7 @@ AC_PROG_AWK
 AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_LN_S
+AC_DISABLE_STATIC
 AC_PROG_LIBTOOL
 AC_PROG_MAKE_SET
 
@@ -22,6 +23,7 @@ PKG_CHECK_MODULES(LIBRRA, librra >= 0.9.1)
 
 PKG_CHECK_MODULES(GNOME2, 
 				  glib-2.0       \
+				  gmodule-2.0    \
 				  gtk+-2.0       \
 				  libgnome-2.0   \
 				  libgnomeui-2.0 \ 
@@ -79,6 +81,7 @@ AC_OUTPUT([
 	pixmaps/48x48/Makefile
 	data/Makefile
 	man/Makefile
+	modules/Makefile
 	po/Makefile.in
 ])
 
