@@ -1,0 +1,4 @@
+#include <glib.h>
+
+void module_connect_func (const gchar *device_name);
+void module_disconnect_func (const gchar *device_name);
