@@ -1,3 +1,8 @@
+2007-08-30  Mark Ellis <mark@mpellis.org.uk>
+
+	* add simple module plugin mechanism for
+	   connect/disconnect events
+
 2007-08-23  Mark Ellis <mark@mpellis.org.uk>
 
 	* add device info dialog for system info,
